crates/assembly/src/snapshots/miden_assembly__tests__decorators_dyn.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    join
        basic_block
            push(2147483648)
            push(4294967294)
            mstore
            drop
            noop
            debug(stack.0)
        end
        dyn
    end
    debug(stack.1)
end
