crates/assembly/src/snapshots/miden_assembly__tests__decorators_external.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    join
        basic_block
            push(2147483648)
            push(4294967294)
            mstore
            drop
            noop
            debug(stack.0)
        end
        external.0xf9805a40a530fbd7512bf1d5fe408fccf67b6943ff321bc9abc70268efb6c9e2
    end
    debug(stack.1)
end
