crates/assembly/src/snapshots/miden_assembly__tests__decorators_join_and_split.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    join
        join
            basic_block
                push(2147483648)
                push(4294967294)
                mstore
                drop
                noop
                debug(stack.0)
                debug(stack.1)
            end
            if.true
                basic_block debug(stack.2) add debug(stack.3) end
            else
                basic_block debug(stack.4) mul debug(stack.5) end
            end
        end
        debug(stack.6)
        if.true
            basic_block debug(stack.7) push(42) noop debug(stack.8) end
        else
            basic_block debug(stack.9) push(22) noop debug(stack.10) end
        end
    end
    debug(stack.11)
end
