crates/assembly/src/snapshots/miden_assembly__tests__decorators_repeat_split.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    join
        join
            basic_block
                push(2147483648)
                push(4294967294)
                mstore
                drop
                noop
                debug(stack.0)
            end
            if.true
                basic_block debug(stack.1) push(42) noop debug(stack.2) end
            else
                basic_block debug(stack.3) push(22) noop debug(stack.3) end
            end
            debug(stack.4)
        end
        if.true
            basic_block debug(stack.1) push(42) noop debug(stack.2) end
        else
            basic_block debug(stack.3) push(22) noop debug(stack.3) end
        end
        debug(stack.4)
    end
    debug(stack.5)
end
