crates/assembly/src/snapshots/miden_assembly__tests__empty_repeat.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 174
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        noop
        noop
        noop
        noop
        noop
        noop
    end
end
