crates/assembly/src/snapshots/miden_assembly__tests__issue_2181_locaddr_bug_assembly.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        push(4)
        push(4294967294)
        mload
        add
        push(4294967294)
        mstore
        drop
        push(18446744069414584317)
        noop
        push(4294967294)
        mload
        add
        push(18446744069414584317)
        push(4294967294)
        mload
        add
        push(18446744069414584317)
        noop
        push(4294967294)
        mload
        add
        noop
        drop
        drop
        drop
        drop
        noop
        push(18446744069414584317)
        push(4294967294)
        mload
        add
        push(4294967294)
        mstore
        drop
    end
end
