crates/assembly/src/snapshots/miden_assembly__tests__link_time_const_evaluation_succeeds.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    join
        join
            basic_block
                push(2147483648)
                push(4294967294)
                mstore
                drop
                pad
                incr
                noop
            end
            external.0x6fb39fb6f0854fd11458f45f4d419503718f626499d4421d540ac7683049d8c4
        end
        basic_block add add end
    end
end
