crates/assembly/src/snapshots/miden_assembly__tests__mast_builder_acceptance_corpus.snap
---
source: crates/assembly/src/tests.rs
expression: summary
---
=== straight_line_events ===
program_hash=Word([12614702205497649881, 12127568497201014545, 7842637884929088913, 10693178696824766931])
entrypoint=0
num_procedures=1
num_nodes=1
forest_commitment=Word([6431223599694314183, 16370344113059055266, 18166949336182854265, 7869904690670134179])
serialized_program_len=292
serialized_forest_len=287
roots=[0]
procedure_digests=[Word([12614702205497649881, 12127568497201014545, 7842637884929088913, 10693178696824766931])]
node_digests=[Word([12614702205497649881, 12127568497201014545, 7842637884929088913, 10693178696824766931])]
debug_counts=asm_ops:4 debug_vars:0 procedure_names:0
asm_ops=["::$exec::$main:push.1:2:loc=true", "::$exec::$main:push.2:1:loc=true", "::$exec::$main:add:1:loc=true", "::$exec::$main:emit.2786995720836218532:3:loc=true"]
debug_vars=[]
node[0]=asm:[(4, 0), (6, 1), (7, 2), (8, 3)] debug:[]
=== nested_control_flow ===
program_hash=Word([298602743804803945, 17783773036693491043, 7068495832933706653, 5989389511563917636])
entrypoint=6
num_procedures=1
num_nodes=7
forest_commitment=Word([3714580984098541856, 12252544821581367211, 17688044019488851901, 14018991694298092735])
serialized_program_len=681
serialized_forest_len=676
roots=[6]
procedure_digests=[Word([298602743804803945, 17783773036693491043, 7068495832933706653, 5989389511563917636])]
node_digests=[Word([86181335481113900, 14976092376696734534, 560743339174572437, 13632607639078969171]), Word([1618626467702315381, 13344503385214841037, 4028957706577516059, 4200743287393686744]), Word([8019456990852053741, 16318268208064511592, 2499360147716155906, 38098599977697625]), Word([11341208701978610969, 6738340298281906314, 11384853062201014253, 7643697760192687063]), Word([17284429615738349315, 3265723336823053129, 16763177991670698974, 4564260056243480206]), Word([12353770508652503430, 12559984080784183492, 6558664619468428765, 5174073810940115597]), Word([298602743804803945, 17783773036693491043, 7068495832933706653, 5989389511563917636])]
debug_counts=asm_ops:8 debug_vars:0 procedure_names:0
asm_ops=["::$exec::$main:push.1:2:loc=true", "::$exec::$main:push.2:1:loc=true", "::$exec::$main:push.3:1:loc=true", "::$exec::$main:push.1:2:loc=true", "::$exec::$main:add:1:loc=true", "::$exec::$main:if.true:0:loc=true", "::$exec::$main:begin:0:loc=true", "::$exec::$main:begin:0:loc=true"]
debug_vars=[]
node[0]=asm:[(4, 0)] debug:[]
node[1]=asm:[(0, 1)] debug:[]
node[2]=asm:[(0, 2)] debug:[]
node[3]=asm:[(0, 3), (2, 4), (3, 3), (5, 4), (6, 3), (8, 4)] debug:[]
node[4]=asm:[(0, 5)] debug:[]
node[5]=asm:[(0, 6)] debug:[]
node[6]=asm:[(0, 7)] debug:[]
=== procedure_calls_and_repeated_subtrees ===
program_hash=Word([16688096393074611401, 15219312243064089067, 2735102240865831077, 11516757302611198995])
entrypoint=2
num_procedures=3
num_nodes=3
forest_commitment=Word([11475882344306007959, 6880902340699785361, 2957575546688703649, 15692155869575099255])
serialized_program_len=515
serialized_forest_len=510
roots=[0, 1, 2]
procedure_digests=[Word([7605485948720986862, 2921952985602377303, 15084298833314710373, 505476278546891273]), Word([9614448518326098604, 16326509297613295904, 11582673910224961196, 13720430527534618004]), Word([16688096393074611401, 15219312243064089067, 2735102240865831077, 11516757302611198995])]
node_digests=[Word([7605485948720986862, 2921952985602377303, 15084298833314710373, 505476278546891273]), Word([9614448518326098604, 16326509297613295904, 11582673910224961196, 13720430527534618004]), Word([16688096393074611401, 15219312243064089067, 2735102240865831077, 11516757302611198995])]
debug_counts=asm_ops:5 debug_vars:0 procedure_names:0
asm_ops=["::$exec::repeated_b:push.9:1:loc=true", "::$exec::repeated_b:push.3:1:loc=true", "::$exec::repeated_b:add:1:loc=true", "::$exec::decorated:push.0:1:loc=true", "::$exec::decorated:drop:1:loc=true"]
debug_vars=[]
node[0]=asm:[(0, 0), (1, 1), (2, 2)] debug:[]
node[1]=asm:[(0, 3), (1, 4)] debug:[]
node[2]=asm:[(4, 0), (5, 1), (6, 2), (7, 0), (9, 1), (10, 2), (11, 3), (12, 4)] debug:[]
=== static_imports ===
program_hash=Word([10737499367639956463, 16940963510047765722, 8381129415427300800, 4677099985735144174])
entrypoint=2
num_procedures=3
num_nodes=3
forest_commitment=Word([4597135287931426950, 5408590159468498165, 10659607283168711660, 1934786554314276348])
serialized_program_len=500
serialized_forest_len=495
roots=[0, 1, 2]
procedure_digests=[Word([9614448518326098604, 16326509297613295904, 11582673910224961196, 13720430527534618004]), Word([14252816028170271514, 13640737174446745137, 8382307916921433839, 12142636207710793717]), Word([10737499367639956463, 16940963510047765722, 8381129415427300800, 4677099985735144174])]
node_digests=[Word([9614448518326098604, 16326509297613295904, 11582673910224961196, 13720430527534618004]), Word([14252816028170271514, 13640737174446745137, 8382307916921433839, 12142636207710793717]), Word([10737499367639956463, 16940963510047765722, 8381129415427300800, 4677099985735144174])]
debug_counts=asm_ops:5 debug_vars:0 procedure_names:0
asm_ops=["::acceptance::helpers::inspect:push.0:1:loc=true", "::acceptance::helpers::inspect:drop:1:loc=true", "::acceptance::helpers::inc:push.1:2:loc=true", "::acceptance::helpers::inc:add:1:loc=true", "::$exec::$main:push.41:1:loc=true"]
debug_vars=[]
node[0]=asm:[(0, 0), (1, 1)] debug:[]
node[1]=asm:[(0, 2), (2, 3)] debug:[]
node[2]=asm:[(4, 4), (5, 2), (7, 3), (8, 0), (9, 1)] debug:[]
