crates/assembly/src/snapshots/miden_assembly__tests__module_alias.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    join
        basic_block
            push(2147483648)
            push(4294967294)
            mstore
            drop
            pad
            incr
            pad
            push(2)
            pad
        end
        external.0x1585ac48b20734f964bd5ca3b044d5f6b53a2e2280897c3244e0d11007f96974
    end
end
